cabal-version:   3.0
name:            cabal-flags
version:         0.1.0.0
license:         NONE
author:          Artem Pelenitsyn
maintainer:      a.pelenitsyn@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cabal-flags
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
